--- a/ProgrammingCamp.API/StarterProject.Api/StarterProject.Api.csproj
+++ b/ProgrammingCamp.API/StarterProject.Api/StarterProject.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.3" />
   </ItemGroup>
 
 </Project>
