Fix API/ in controllers
@Jay

--- a/ProgrammingCamp.API/StarterProject.Api/appsettings.json
+++ b/ProgrammingCamp.API/StarterProject.Api/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   },
   "ConnectionStrings": {
-    "DataContext": "Server=DESKTOP-OA0NM11\\SQLEXPRESS;Database=ProgrammingCamp;Trusted_Connection=True;ConnectRetryCount=0;"
+    "DataContext": "Server=localhost\\SQLEXPRESS;Database=ProgrammingCamp;Trusted_Connection=True;ConnectRetryCount=0;"
   },
   "Logging": {
     "LogLevel": {
